k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vue-chi-staging
  labels:
    environment: staging
    project: vue-chi
